[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "image-processing-package"
version ="0.1.0"
authors = [{name = "Robélio Barreto", email="robeliobasantos@gmail.com"}]
description = "Pacote de Processamento de Imagens"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "Pillow>=9.0.0",
    "numpy>=1.21.0"
    "matplotlib>=3.5.0"
]

[project.urls]
Homepage = "https://github.com/robellio/image-processing-package"

[tool.setuptools]
package = ["image_package"]