[metadata]
name = image-processing-package
version: attr: image_package.__version__
author: Robélio Barreto
description = Advanced image processing width blending, transformations and visualization
log_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/robellio/image-processing-package
project_urls = 
        Source = https://github.com/robellio/image-processing-package
keywords = 
    image-processing
    computer-vision 
    pillow 
    numpy 
classifiers = 
    Development Status :: 4 -  Beta
    Progamming Language :: Python :: 3          
    Progamming Language :: Python :: 3.7          
    Progamming Language :: Python :: 3.8          
    Progamming Language :: Python :: 3.9          
    Progamming Language :: Python :: 3.10          
    Progamming Language :: Python :: 3.13
    License :: OSI Approved ::  MIT License 
    Operating System :: OS Independent   
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Multimedia :: Graphics
    Topic :: Scientific/Engineering :: Image Processing 
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir = 
    = src 
packages = find: 
python_requires = >=3.7
intall_requires = 
    Pillow>= 9.0.0
    numpy>=1.21.0 
    matplotlib>=3.5.0
include_package_data = true
zip_safe = False

[options.packages.find] 
where = src 
exclude = 
    tests*
    use_case*

[options.extras_require] 
test = 
    pytest>=7.0.0
    pytest-cov>=3.0.0
    pytest-mock>=3.0.0
dev = 
    image-processing-package[test]            
    pre-commit>=2.0.0 
docs = 
    sphinx>=4.0.0
    sphinx-rtd-theme>=0.5.0
    myst-parser>=0.15.0
